backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: rajcharan2002/backend:latest
        imagePullPolicy: IfNotPresent
        command: ["/bin/bash", "-c"]
        args: ["sleep infinity"]
        ports:
        - containerPort: 8000
